REFs/CKA/daemonset.yaml
# Lesson 3 Lab : Running a DaemonSet
# Copy/Paste spec from : https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/#writing-a-daemonset-spec
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginxdaemon
spec:
  selector:
    matchLabels:
      name: nginxdaemon
  template:
    metadata:
      labels:
        name: nginxdaemon
    spec:
      # tolerations:
      # # these tolerations are to have the daemonset runnable on control plane nodes
      # # remove them if your control plane nodes should not run pods
      # - key: node-role.kubernetes.io/control-plane
      #   operator: Exists
      #   effect: NoSchedule
      # - key: node-role.kubernetes.io/master
      #   operator: Exists
      #   effect: NoSchedule
      containers:
      - name: nginxdaemon
        image: nginx
      #   resources:
      #     limits:
      #       memory: 200Mi
      #     requests:
      #       cpu: 100m
      #       memory: 200Mi
      #   volumeMounts:
      #   - name: varlog
      #     mountPath: /var/log
      # terminationGracePeriodSeconds: 30
      # volumes:
      # - name: varlog
      #   hostPath:
      #     path: /var/log
