REFs/CKA/lab4-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: lab4
spec:
  containers:
  - name: lab4
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: web 
  volumes:
  - name: web
    hostPath:
      path: /usr/share/nginx/html
