REFs/CKA/shared_volume.yaml
# @ https://github.com/sandervanvugt/cka/blob/master/morevolumes.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: sv
spec:
  containers:
  - name: centos1
    image: centos:7
    command:
      - sleep
      - "3600" 
    volumeMounts:
      - mountPath: /centos1
        name: test
  - name: centos2
    image: centos:7
    command:
      - sleep
      - "3600"
    volumeMounts:
      - mountPath: /centos2
        name: test
  volumes: 
    # Shared (mounted) by the two containers of this Pod
    - name: test
      emptyDir: {}
